--- a/release.cfg
+++ b/release.cfg
@@ -1,2 +1,3 @@
 JAVA_HOME=/System/Library/Java/JavaVirtualMachines/1.6.0.jdk/Contents/Home
 MAVEN_HOME=/usr/local/Cellar/maven/3.1.0/libexec
+test=test if can auto build while resource change
