--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,10 @@
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.6</version>
 				<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
 					<instrumentation>
 						<!-- 
 						<ignores>
